<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Definitions</string>
    <string name="hello_world">Hello world! Hello world! Hello world! This
        						is where I will display the definitino of the
        						word I want to guess. It will be at the top.
        						</string>
    <string name="menu_settings">Settings</string>
    <string name="choiceA">Word A</string>
    <string name="choiceB">Word B</string>
    <string name="choiceC">Word C</string>
    <string name="choiceD">Word D</string>
    <string name="statusString">Pick the term matching the description.</string>
    <string name="selectFileText">Select File</string>
    <string name="gameModeText">Select Game Mode</string>

</resources>