<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choiceA" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choiceB" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choiceC" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choiceD" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/currentFileNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current File" />

        <TextView
            android:id="@+id/statusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusString" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="22dp" >
 	
        <TextView
            android:id="@+id/definitionView"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:maxLines="7"
            android:scrollbars="vertical"
            android:text="@string/hello_world" />

    </LinearLayout>

</RelativeLayout>